# qualcomm-acceleration

./: .gitignore  README.md  ThirdPartyNotices.txt
conversion-toolchain/: Dockerfile  README.md  build-toolchain.sh  requirements.txt  setup.py
conversion-toolchain/conversion_toolchain/: __init__.py  config_utils.py  main.py  utils.py
conversion-toolchain/conversion_toolchain/quantize/: __init__.py  data_reader.py  quantize_model.py
conversion-toolchain/scripts/: convert.sh
runtime-library/: CMakeLists.txt  build-runtime.sh
runtime-library/include/: runtime_core.h  runtime_utils.h
runtime-library/src/: runtime_core.c
